--- a/pom.xml
+++ b/pom.xml
@@ -196,7 +196,17 @@
 	  <artifactId>struts2-json-plugin</artifactId>
 	  <version>2.3.16.2</version>
     </dependency>
-            
+    
+    <dependency>
+		<groupId>org.apache.struts</groupId>
+		<artifactId>struts2-convention-plugin</artifactId>
+		<version>2.3.20</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.struts</groupId>
+		<artifactId>struts2-rest-plugin</artifactId>
+		<version>2.3.20</version>
+	</dependency>
         
   </dependencies>
   <build>
