--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
     
   <display-name>Spring+Struts+Hibernate Integration Example</display-name>
   	<welcome-file-list>
-  		<welcome-file>/WEB-INF/index.jsp</welcome-file>
+  		<welcome-file>index.html</welcome-file>
   	</welcome-file-list>
   	
   	<!-- Specify the spring context information location;
